--- a/openhatch_osd/output/stories/charts/index.html
+++ b/openhatch_osd/output/stories/charts/index.html
@@ -2,17 +2,17 @@
 <html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
 <head>
 <meta charset="utf-8">
-<base href="https://example.com/stories/charts/">
+<base href="https://willingc.github.io/oh-ghc-2015/stories/charts/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Charts | GHC 2015 Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
-<link rel="canonical" href="https://example.com/stories/charts/">
+<link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/charts/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
 <meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
 <meta property="og:title" content="Charts">
-<meta property="og:url" content="https://example.com/stories/charts/">
+<meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/charts/">
 <meta property="og:description" content="If you are using reStructuredText and install pygal, Nikola has support for rather nice charts
 with little effort, and i's even semi-interactive (hover your pointer over the legend!):
 .. chart:: Stack">
@@ -33,7 +33,7 @@ with little effort, and i's even semi-interactive (hover your pointer over the l
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://example.com/">
+            <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
                 <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
             </a>
