--- a/openhatch_osd/output/stories/creating-a-theme/index.html
+++ b/openhatch_osd/output/stories/creating-a-theme/index.html
@@ -2,17 +2,17 @@
 <html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
 <head>
 <meta charset="utf-8">
-<base href="https://example.com/stories/creating-a-theme/">
+<base href="https://willingc.github.io/oh-ghc-2015/stories/creating-a-theme/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Creating A Theme | GHC 2015 Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
-<link rel="canonical" href="https://example.com/stories/creating-a-theme/">
+<link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/creating-a-theme/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
 <meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
 <meta property="og:title" content="Creating A Theme">
-<meta property="og:url" content="https://example.com/stories/creating-a-theme/">
+<meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/creating-a-theme/">
 <meta property="og:description" content="Nikola is a static site and blog generator. So is Jekyll. While I like what we have done with Nikola,
 I do admit that Jekyll (and others!) have many more, and nicer themes than Nikola does.
 This docum">
@@ -33,7 +33,7 @@ This docum">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://example.com/">
+            <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
                 <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
             </a>
