--- a/openhatch_osd/output/stories/listings-demo/index.html
+++ b/openhatch_osd/output/stories/listings-demo/index.html
@@ -2,17 +2,17 @@
 <html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
 <head>
 <meta charset="utf-8">
-<base href="https://example.com/stories/listings-demo/">
+<base href="https://willingc.github.io/oh-ghc-2015/stories/listings-demo/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Listings Demo | GHC 2015 Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
-<link rel="canonical" href="https://example.com/stories/listings-demo/">
+<link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/listings-demo/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
 <meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
 <meta property="og:title" content="Listings Demo">
-<meta property="og:url" content="https://example.com/stories/listings-demo/">
+<meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/listings-demo/">
 <meta property="og:description" content="Nikola intends to let you show code easily via listings:
 hello.py
 #!/usr/bin/python
@@ -42,7 +42,7 @@ if __name__ == &quot;__main__&quot;">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://example.com/">
+            <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
                 <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
             </a>
