Nikola auto commit.
Source commit: 8bf228c11d43eae520f726aaa5e833454e59167a
Nikola version: 7.7.1

--- a/stories/charts/index.html
+++ b/stories/charts/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <base href="https://willingc.github.io/oh-ghc-2015/stories/charts/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Charts | GHC 2015 Open Source Day with OpenHatch</title>
+<title>Charts | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/charts/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
-<meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
+<meta property="og:site_name" content="Open Source Day with OpenHatch">
 <meta property="og:title" content="Charts">
 <meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/charts/">
 <meta property="og:description" content="If you are using reStructuredText and install pygal, Nikola has support for rather nice charts
@@ -35,7 +35,7 @@ with little effort, and i's even semi-interactive (hover your pointer over the l
             </button>
             <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
-                <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
+                <span id="blog-title">Open Source Day with OpenHatch</span>
             </a>
         </div>
 <!-- /.navbar-header -->
