--- a/listings/index.html
+++ b/listings/index.html
@@ -5,7 +5,7 @@
 <base href="https://willingc.github.io/oh-ghc-2015/listings/">
 <meta name="description" content="listings">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>listings | GHC 2015 Open Source Day with OpenHatch</title>
+<title>listings | Open Source Day with OpenHatch</title>
 <link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml">
@@ -28,7 +28,7 @@
             </button>
             <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
-                <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
+                <span id="blog-title">Open Source Day with OpenHatch</span>
             </a>
         </div>
 <!-- /.navbar-header -->
