--- a/stories/a-study-in-scarlet/index.html
+++ b/stories/a-study-in-scarlet/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <base href="https://willingc.github.io/oh-ghc-2015/stories/a-study-in-scarlet/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>A STUDY IN SCARLET. | GHC 2015 Open Source Day with OpenHatch</title>
+<title>A STUDY IN SCARLET. | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/a-study-in-scarlet/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
-<meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
+<meta property="og:site_name" content="Open Source Day with OpenHatch">
 <meta property="og:title" content="A STUDY IN SCARLET.">
 <meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/a-study-in-scarlet/">
 <meta property="og:description" content="Title:A Study In Scarlet
@@ -46,7 +46,7 @@ Produced by:Roger Squires
             </button>
             <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
-                <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
+                <span id="blog-title">Open Source Day with OpenHatch</span>
             </a>
         </div>
 <!-- /.navbar-header -->
