--- a/stories/creating-a-theme/index.html
+++ b/stories/creating-a-theme/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <base href="https://willingc.github.io/oh-ghc-2015/stories/creating-a-theme/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Creating A Theme | GHC 2015 Open Source Day with OpenHatch</title>
+<title>Creating A Theme | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/creating-a-theme/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
-<meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
+<meta property="og:site_name" content="Open Source Day with OpenHatch">
 <meta property="og:title" content="Creating A Theme">
 <meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/creating-a-theme/">
 <meta property="og:description" content="Nikola is a static site and blog generator. So is Jekyll. While I like what we have done with Nikola,
@@ -35,7 +35,7 @@ This docum">
             </button>
             <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
-                <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
+                <span id="blog-title">Open Source Day with OpenHatch</span>
             </a>
         </div>
 <!-- /.navbar-header -->
