--- a/stories/upgrading-to-v6/index.html
+++ b/stories/upgrading-to-v6/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <base href="https://willingc.github.io/oh-ghc-2015/stories/upgrading-to-v6/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Upgrading to v6 | GHC 2015 Open Source Day with OpenHatch</title>
+<title>Upgrading to v6 | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/upgrading-to-v6/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
-<meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
+<meta property="og:site_name" content="Open Source Day with OpenHatch">
 <meta property="og:title" content="Upgrading to v6">
 <meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/upgrading-to-v6/">
 <meta property="og:description" content="Version:
@@ -39,7 +39,7 @@ need to change in your">
             </button>
             <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
-                <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
+                <span id="blog-title">Open Source Day with OpenHatch</span>
             </a>
         </div>
 <!-- /.navbar-header -->
