--- a/stories/welcome/index.html
+++ b/stories/welcome/index.html
@@ -5,14 +5,14 @@
 <base href="https://willingc.github.io/oh-ghc-2015/stories/welcome/">
 <meta name="description" content="Welcome to OpenHatch">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Welcome | GHC 2015 Open Source Day with OpenHatch</title>
+<title>Welcome | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/welcome/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="description" itemprop="description" content="Welcome to OpenHatch">
 <meta name="author" content="Carol Willing">
-<meta property="og:site_name" content="GHC 2015 Open Source Day with OpenHatch">
+<meta property="og:site_name" content="Open Source Day with OpenHatch">
 <meta property="og:title" content="Welcome">
 <meta property="og:url" content="https://willingc.github.io/oh-ghc-2015/stories/welcome/">
 <meta property="og:description" content="Welcome to OpenHatch">
@@ -36,7 +36,7 @@
             </button>
             <a class="navbar-brand" href="https://willingc.github.io/oh-ghc-2015/">
 
-                <span id="blog-title">GHC 2015 Open Source Day with OpenHatch</span>
+                <span id="blog-title">Open Source Day with OpenHatch</span>
             </a>
         </div>
 <!-- /.navbar-header -->
