Nikola auto commit.
Source commit: a7522153a780af76661142dbfe126aac423a9423
Nikola version: 7.7.1

--- a/archive.html
+++ b/archive.html
@@ -34,6 +34,9 @@
 <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
+<li>
+<a href="stories/getting-ready/index.html">Getting Ready</a>
+                </li>
 <li class="active">
 <a href="#">Archive <span class="sr-only">(active)</span></a>
                 </li>
