--- a/galleries/index.html
+++ b/galleries/index.html
@@ -42,6 +42,9 @@
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../stories/getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../archive.html">Archive</a>
                 </li>
 <li>
