--- a/stories/charts/index.html
+++ b/stories/charts/index.html
@@ -42,6 +42,9 @@ with little effort, and i's even semi-interactive (hover your pointer over the l
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
