--- a/stories/dr-nikolas-vendetta/index.html
+++ b/stories/dr-nikolas-vendetta/index.html
@@ -115,6 +115,9 @@ The Project Guten­berg EBook of A Bid for For­tune, by Guy ­Booth­by
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
