--- a/stories/listings-demo/index.html
+++ b/stories/listings-demo/index.html
@@ -51,6 +51,9 @@ if __name__ == &quot;__main__&quot;">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
