--- a/stories/social_buttons/index.html
+++ b/stories/social_buttons/index.html
@@ -58,6 +58,9 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
