--- a/stories/theming/index.html
+++ b/stories/theming/index.html
@@ -52,6 +52,9 @@ Identifying and customizing diffe">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
