--- a/stories/a-study-in-scarlet/index.html
+++ b/stories/a-study-in-scarlet/index.html
@@ -53,6 +53,9 @@ Produced by:Roger Squires
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
