--- a/stories/creating-a-theme/index.html
+++ b/stories/creating-a-theme/index.html
@@ -42,6 +42,9 @@ This docum">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
