--- a/stories/extending/index.html
+++ b/stories/extending/index.html
@@ -59,6 +59,9 @@ RestExten">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
