--- a/stories/internals/index.html
+++ b/stories/internals/index.html
@@ -43,6 +43,9 @@ So, this is a short document expla">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
