--- a/stories/quickstart/index.html
+++ b/stories/quickstart/index.html
@@ -56,6 +56,9 @@ Document Title / Subti">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
