--- a/stories/upgrading-to-v6/index.html
+++ b/stories/upgrading-to-v6/index.html
@@ -46,6 +46,9 @@ need to change in your">
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li>
+<a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
 <a href="../../archive.html">Archive</a>
                 </li>
 <li>
