Nikola auto commit.
Source commit: 55d1b55c80630daaa54bf2b0f393a1d4cdcc1111
Nikola version: 7.7.1

--- a/stories/getting-ready/index.html
+++ b/stories/getting-ready/index.html
@@ -116,8 +116,8 @@ do not need to do any prior preparation. Please bring your patience and enthusia
 <li>Systers Volunteer Management System</li>
 <li>"To be named and created" Open Source Day 2015 Pay-It-Forward Project</li>
 </ul>
-<p>A nice post about OpenHatch and Open Source Day by Jen Wike Huger at <a href=".#id1"><span class="problematic" id="id2">`Opensource.com
-&lt;https://opensource.com/life/15/10/ghc-interview-carol-willing`_</span></a>. She'll be speaking a GHC too.</p>
+<p>A nice post about OpenHatch and Open Source Day by Jen Wike Huger at <a href=".#id1"><span class="problematic" id="id2">`Opensource.com &lt;https://opensource.com/life/15/10/ghc-interview-carol-willing`_</span></a>.
+Jen will be speaking at GHC too.</p>
 </div>
 <div class="section" id="thank-you">
 <h2>Thank you</h2>
