Nikola auto commit.
Source commit: 305f6c6c088701b2ccc4b0d0192cb3a11d383291
Nikola version: 7.7.1

--- a/stories/upgrading-to-v6/index.html
+++ b/stories/upgrading-to-v6/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Upgrading to v6 | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<meta content="#2c3e50" name="theme-color">
+<meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/upgrading-to-v6/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
@@ -47,9 +47,6 @@ need to change in your">
             <ul class="nav navbar-nav">
 <li>
 <a href="../getting-ready/index.html">Getting Ready</a>
-                </li>
-<li>
-<a href="../mentors/index.html">Mentors</a>
                 </li>
 <li>
 <a href="../../archive.html">Archive</a>
@@ -126,11 +123,11 @@ jinja-based theme, upgrading is probably a bad idea right now.</dd>
 using a custom theme. Also, some templates have been tweaked, but nothing should
 break for you.</p>
 <p>Facebook comments support changed the HTML tag to:</p>
-<pre class="code mako"><a name="rest_code_58a349ffbf0b456fb1e665b8e5ac182e-1"></a><span class="x">&lt;html</span>
-<a name="rest_code_58a349ffbf0b456fb1e665b8e5ac182e-2"></a><span class="cp">%</span><span class="k">if</span> <span class="n">comment_system</span> <span class="o">==</span> <span class="s">'facebook'</span><span class="p">:</span><span class="x"></span>
-<a name="rest_code_58a349ffbf0b456fb1e665b8e5ac182e-3"></a><span class="x">xmlns:fb="http://ogp.me/ns/fb#"</span>
-<a name="rest_code_58a349ffbf0b456fb1e665b8e5ac182e-4"></a><span class="cp">%</span><span class="k">endif</span><span class="x"></span>
-<a name="rest_code_58a349ffbf0b456fb1e665b8e5ac182e-5"></a><span class="x">lang="</span><span class="cp">${</span><span class="n">lang</span><span class="cp">}</span><span class="x">"&gt;</span>
+<pre class="code mako"><a name="rest_code_7e0bbd00b2e1474fa3e3cfad2f5306da-1"></a><span class="x">&lt;html</span>
+<a name="rest_code_7e0bbd00b2e1474fa3e3cfad2f5306da-2"></a><span class="cp">%</span><span class="k">if</span> <span class="n">comment_system</span> <span class="o">==</span> <span class="s">'facebook'</span><span class="p">:</span><span class="x"></span>
+<a name="rest_code_7e0bbd00b2e1474fa3e3cfad2f5306da-3"></a><span class="x">xmlns:fb="http://ogp.me/ns/fb#"</span>
+<a name="rest_code_7e0bbd00b2e1474fa3e3cfad2f5306da-4"></a><span class="cp">%</span><span class="k">endif</span><span class="x"></span>
+<a name="rest_code_7e0bbd00b2e1474fa3e3cfad2f5306da-5"></a><span class="x">lang="</span><span class="cp">${</span><span class="n">lang</span><span class="cp">}</span><span class="x">"&gt;</span>
 </pre>
 <p>If you do not want to use Facebook comments, you can leave the old <tt class="docutils literal">&lt;html
 <span class="pre">lang="${lang}"&gt;</span></tt> tag in and it will work just fine.</p>
@@ -154,22 +151,22 @@ should be <strong>exactly</strong> as before.</p>
 story short, anything that had a <tt class="docutils literal">True</tt> as the <tt class="docutils literal">use_in_feeds</tt>
 (last) value goes to <tt class="docutils literal">POSTS</tt> and anything with <tt class="docutils literal">False</tt> goes to
 <tt class="docutils literal">PAGES</tt>.  For example:</p>
-<pre class="code python"><a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-1"></a><span class="n">post_pages</span> <span class="o">=</span> <span class="p">(</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-2"></a>    <span class="p">(</span><span class="s">"posts/*.txt"</span><span class="p">,</span> <span class="s">""</span><span class="p">,</span> <span class="s">"post.tmpl"</span><span class="p">,</span> <span class="bp">True</span><span class="p">),</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-3"></a>    <span class="p">(</span><span class="s">"stories/*.txt"</span><span class="p">,</span> <span class="s">"p"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">,</span> <span class="bp">False</span><span class="p">),</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-4"></a>    <span class="p">(</span><span class="s">"stories/*.html"</span><span class="p">,</span> <span class="s">"s"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">,</span> <span class="bp">False</span><span class="p">),</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-5"></a><span class="p">)</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-6"></a>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-7"></a><span class="c">### becomes ###</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-8"></a>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-9"></a><span class="n">POSTS</span> <span class="o">=</span> <span class="p">(</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-10"></a>    <span class="p">(</span><span class="s">"posts/*.txt"</span><span class="p">,</span> <span class="s">""</span><span class="p">,</span> <span class="s">"post.tmpl"</span><span class="p">),</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-11"></a><span class="p">)</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-12"></a>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-13"></a><span class="n">PAGES</span> <span class="o">=</span> <span class="p">(</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-14"></a>    <span class="p">(</span><span class="s">"stories/*.txt"</span><span class="p">,</span> <span class="s">"p"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">),</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-15"></a>    <span class="p">(</span><span class="s">"stories/*.html"</span><span class="p">,</span> <span class="s">"s"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">),</span>
-<a name="rest_code_d5c616da8a2c4276bc9dd0784cda165c-16"></a><span class="p">)</span>
+<pre class="code python"><a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-1"></a><span class="n">post_pages</span> <span class="o">=</span> <span class="p">(</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-2"></a>    <span class="p">(</span><span class="s">"posts/*.txt"</span><span class="p">,</span> <span class="s">""</span><span class="p">,</span> <span class="s">"post.tmpl"</span><span class="p">,</span> <span class="bp">True</span><span class="p">),</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-3"></a>    <span class="p">(</span><span class="s">"stories/*.txt"</span><span class="p">,</span> <span class="s">"p"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">,</span> <span class="bp">False</span><span class="p">),</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-4"></a>    <span class="p">(</span><span class="s">"stories/*.html"</span><span class="p">,</span> <span class="s">"s"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">,</span> <span class="bp">False</span><span class="p">),</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-5"></a><span class="p">)</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-6"></a>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-7"></a><span class="c">### becomes ###</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-8"></a>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-9"></a><span class="n">POSTS</span> <span class="o">=</span> <span class="p">(</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-10"></a>    <span class="p">(</span><span class="s">"posts/*.txt"</span><span class="p">,</span> <span class="s">""</span><span class="p">,</span> <span class="s">"post.tmpl"</span><span class="p">),</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-11"></a><span class="p">)</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-12"></a>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-13"></a><span class="n">PAGES</span> <span class="o">=</span> <span class="p">(</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-14"></a>    <span class="p">(</span><span class="s">"stories/*.txt"</span><span class="p">,</span> <span class="s">"p"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">),</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-15"></a>    <span class="p">(</span><span class="s">"stories/*.html"</span><span class="p">,</span> <span class="s">"s"</span><span class="p">,</span> <span class="s">"story.tmpl"</span><span class="p">),</span>
+<a name="rest_code_beb31ff9331c4d5fac89d7a36034a067-16"></a><span class="p">)</span>
 </pre>
 <p>Also, you will get warnings. That doesn't mean things broke. They are
 there to inform you of what's happening, and that you need to tweak your
