--- a/stories/version-control-git/index.html
+++ b/stories/version-control-git/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Version Control (git) | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<meta content="#2c3e50" name="theme-color">
+<meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/version-control-git/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
@@ -41,9 +41,6 @@
             <ul class="nav navbar-nav">
 <li>
 <a href="../getting-ready/index.html">Getting Ready</a>
-                </li>
-<li>
-<a href="../mentors/index.html">Mentors</a>
                 </li>
 <li>
 <a href="../../archive.html">Archive</a>
