--- a/stories/social_buttons/index.html
+++ b/stories/social_buttons/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Alternative Social Buttons | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<meta content="#2c3e50" name="theme-color">
+<meta content="#5670d4" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/social_buttons/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="The Nikola Team">
@@ -59,9 +59,6 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
             <ul class="nav navbar-nav">
 <li>
 <a href="../getting-ready/index.html">Getting Ready</a>
-                </li>
-<li>
-<a href="../mentors/index.html">Mentors</a>
                 </li>
 <li>
 <a href="../../archive.html">Archive</a>
@@ -123,19 +120,19 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
 <h2><a class="toc-backref" href=".#id1">The Default</a></h2>
 <p>By Default, the themes provided with Nikola will add to your pages a "slide in" widget at
 the bottom right of the page, provided by Addthis. This is the HTML code for that:</p>
-<pre class="code html"><a name="rest_code_6df3431f874947708516efdc146591ea-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-2"></a><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"addthisbox"</span> <span class="na">class=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="nt">&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-4"></a><span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_more"</span><span class="nt">&gt;</span>Share<span class="nt">&lt;/a&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-5"></a><span class="nt">&lt;ul&gt;&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_facebook"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-6"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-7"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_linkedin"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-8"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_twitter"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-9"></a><span class="nt">&lt;/ul&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-10"></a><span class="nt">&lt;/div&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-11"></a><span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="nt">&gt;&lt;/script&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
-<a name="rest_code_6df3431f874947708516efdc146591ea-13"></a>"""
+<pre class="code html"><a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-2"></a><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"addthisbox"</span> <span class="na">class=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="nt">&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-4"></a><span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_more"</span><span class="nt">&gt;</span>Share<span class="nt">&lt;/a&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-5"></a><span class="nt">&lt;ul&gt;&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_facebook"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-6"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-7"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_linkedin"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-8"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_twitter"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-9"></a><span class="nt">&lt;/ul&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-10"></a><span class="nt">&lt;/div&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-11"></a><span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="nt">&gt;&lt;/script&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
+<a name="rest_code_544e584dc77a4c5fafc1ffa5711f2e6b-13"></a>"""
 </pre>
 <p>You can change that using the <tt class="docutils literal">SOCIAL_BUTTONS_CODE</tt> option in your conf.py. In some cases, just
 doing that will be enough but in others, it won't. This document tries to describe all the bits
@@ -186,20 +183,20 @@ $ nikola auto -b
 </pre>
 <p>First, let's add the HTML snippet that will show the sharing options. In your conf.py, set this, which
 is the HTML code suggested by ShareNice:</p>
-<pre class="code python"><a name="rest_code_4a5a39db184948f5a9fa8d60104ac8bc-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a name="rest_code_4a5a39db184948f5a9fa8d60104ac8bc-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a name="rest_code_4a5a39db184948f5a9fa8d60104ac8bc-3"></a><span class="s">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
-<a name="rest_code_4a5a39db184948f5a9fa8d60104ac8bc-4"></a><span class="s">    style="float:right"&gt;&lt;/div&gt;"""</span>
-<a name="rest_code_4a5a39db184948f5a9fa8d60104ac8bc-5"></a>
-<a name="rest_code_4a5a39db184948f5a9fa8d60104ac8bc-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""&lt;script src="http://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
+<pre class="code python"><a name="rest_code_63d9e38421c94a0784baad2cb87e9b3a-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a name="rest_code_63d9e38421c94a0784baad2cb87e9b3a-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a name="rest_code_63d9e38421c94a0784baad2cb87e9b3a-3"></a><span class="s">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
+<a name="rest_code_63d9e38421c94a0784baad2cb87e9b3a-4"></a><span class="s">    style="float:right"&gt;&lt;/div&gt;"""</span>
+<a name="rest_code_63d9e38421c94a0784baad2cb87e9b3a-5"></a>
+<a name="rest_code_63d9e38421c94a0784baad2cb87e9b3a-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""&lt;script src="http://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
 </pre>
 <p>And you should now see a sharing box at the bottom right of the page.</p>
 <p>Main problem remaining is that it doesn't really look good and integrated in the page layout.
 I suggest changing the code to this which looks nicer, but still has some placement issues:</p>
-<pre class="code python"><a name="rest_code_c9671e5c94434ccbb003c472ae922de9-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a name="rest_code_c9671e5c94434ccbb003c472ae922de9-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a name="rest_code_c9671e5c94434ccbb003c472ae922de9-3"></a><span class="s">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
-<a name="rest_code_c9671e5c94434ccbb003c472ae922de9-4"></a><span class="s">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a name="rest_code_251eb7a67ef7435a9a8c1c2679bdff78-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a name="rest_code_251eb7a67ef7435a9a8c1c2679bdff78-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a name="rest_code_251eb7a67ef7435a9a8c1c2679bdff78-3"></a><span class="s">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
+<a name="rest_code_251eb7a67ef7435a9a8c1c2679bdff78-4"></a><span class="s">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>If anyone comes up with a better idea of styling/placement, just let me know ;-)</p>
 <p>One bad bit of this so far is that you are now using a script from another site, and that
@@ -247,16 +244,16 @@ $ cp -Rv SocialSharePrivacy-master/build/* files/
 $ cp -R SocialSharePrivacy-master/images/ files/assets/
 </pre>
 <p>Edit your <tt class="docutils literal">conf.py</tt>:</p>
-<pre class="code python"><a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-2"></a><span class="s">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-3"></a><span class="s">&lt;script&gt;</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-4"></a><span class="s">$(document).ready(function () {</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-5"></a><span class="s">    $('.share').socialSharePrivacy();</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-6"></a><span class="s">});</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-7"></a><span class="s">&lt;/script&gt;</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-8"></a><span class="s">"""</span>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-9"></a>
-<a name="rest_code_719e9ca23fa749c68bc6e9ba30e4ddca-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a name="rest_code_85533ebc5839470493007b59febc8532-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-2"></a><span class="s">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-3"></a><span class="s">&lt;script&gt;</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-4"></a><span class="s">$(document).ready(function () {</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-5"></a><span class="s">    $('.share').socialSharePrivacy();</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-6"></a><span class="s">});</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-7"></a><span class="s">&lt;/script&gt;</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-8"></a><span class="s">"""</span>
+<a name="rest_code_85533ebc5839470493007b59febc8532-9"></a>
+<a name="rest_code_85533ebc5839470493007b59febc8532-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>In my experience this produces a broken, duplicate, semi-working thing. YMMV and if you make it work correctly, let me know how :-)</p>
 </div>
